20091030 - Mark:
	1. I separated the Scribbler-specific components from the Player-specific components
	   (even though there are no Player-specific components yet).

	2. I edited the Makefile to be more modular in order to take into account the new
	   directory tree hierarchy.

	3. It is now possible to build a pluggable Player driver by using the default make
	   target, i.e. "make". To build the Scribbler stand-alone driver that John created
	   as a linkable library file, use the libscribbler target, i.e. "make libscribbler".

	N. More to come; this day is not over yet!

20091023 - Mark:

	1. I removed my serial class from the src tree and placed it into a
	   separate folder labeled "Mark" in the top-level directory.

	2. I added some of John's code into the src tree. I believe that this
	   is the bare minimum that we need from John's code in order to start
	   working on the Player driver.

	3. I also wrote up a Makefile with a default "test" target that compiles John's
	   library in addition to temp.cpp, which is basically just a testing driver that
	   I'm using to test John's code.

	4. There's some quirky behavior in John's code. When you create a Scribbler object
	   for the first time, i.e. after starting up the Scribbler, you get some data
	   errors. It seems to work fine after that though. In the Scribbler constructor,
	   after the call to setEchoMode(), Scribbler::getFinalAck() gets called where
	   the data errors occur. At first it would block indefinitely until I lowered the
	   max tries in getCharBlocking() from 1000000 to 10. I couldn't figure out how to
	   fix it, but maybe you'll have better luck with it.

	5. I started this Changelog which is pretty cumbersome to edit, but it's better
	   than nothing. If you have any better ideas then let me know.