@@ -1,0 +1,1 @@
+Test out picture taking and saving on scribbler
